# RPGPROJECT

./: CMakeLists.txt
Resources/config/: display_settings.ini  key_binds.settingsState.ini  key_binds_editorstate.ini  key_binds_gamestate.ini  key_binds_mainmenustate.ini  supported_keys.ini
Resources/config/SaveData/: save_01.sv
src/: Animation.cpp  Animation.hpp  Game.cpp  Game.hpp  ResourcePath.cpp  ResourcePath.hpp  StateData.cpp  StateData.hpp  main.cpp
src/Components/: AnimationComponent.cpp  AnimationComponent.hpp  HitBoxComponent.cpp  HitBoxComponent.hpp  MovementComponent.cpp  MovementComponent.hpp
src/Entities/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp  Slime.cpp  Slime.hpp
src/Gui/: DisplaySettingsMenu.cpp  DisplaySettingsMenu.hpp  Gui.cpp  Gui.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp  PlayerGui.cpp  PlayerGui.h  PlayerGui.hpp
src/States/: EditorState.cpp  EditorState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  SettingsState.cpp  SettingsState.hpp  State.cpp  State.hpp
src/Tile/: Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp
